@@ -1,3 +1,11 @@
+2004-01-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* Boolean.pm: New module.
+
+2003-12-27  Wakaba  <wakaba@suika.fam.cx>
+
+	* Base.pm ($Token): New variable to keep compatibility with old Message::Util::Formatter.
+
 2003-12-06  Wakaba  <wakaba@suika.fam.cx>
 
 	* Base.pm (replace): Use new syntax of Formatter.
